# java-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: asan.yml  rust.yml
src/: lib.rs  log.rs
src/java/: class_constructor.rs  class_field.rs  class_method.rs  java_call_result.rs  java_env.rs  java_env_wrapper.rs  java_field.rs  java_type.rs  java_vm.rs  mod.rs  signature.rs  traits.rs  vm_ptr.rs
src/java/objects/: array.rs  class.rs  constructor.rs  java_object.rs  method.rs  mod.rs  object.rs  string.rs  value.rs
src/java/util/: conversion.rs  macros.rs  util.rs
src/tests/: array_tests.rs  basic_tests.rs  class_constructor_tests.rs  common.rs  method_tests.rs  mod.rs  object_tests.rs  signature_tests.rs
