[package]
name = "java-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
libloading = "0.7.4"
lazy_static = "1.4.0"
java-locator = "0.1.2"
regex = { version = "1", optional = true }

[build-dependencies]
bindgen = "0.63.0"
java-locator = "0.1.2"
build-target = "0.4.0"

[features]
type_check = ["dep:regex"]
